chore: Docs, Db relations, Services for devices components and systems
