# manager/src/components/requests/update-component.request.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreateComponentRequest } from '/src/components/requests/create-component.request';
+
+export class UpdateComponentRequest extends PartialType(CreateComponentRequest) {}
