# manager/src/devices/enums/type.enum.ts
@@ -1,0 +1,6 @@
+export enum DeviceType {
+  SWITCH = 'SWITCH',
+  SENSOR = 'SENSOR',
+  TIMER = 'TIMER',
+  VALVE = 'VALVE',
+}
