# manager/src/systems/requests/update-system.request.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreateSystemRequest } from '/src/systems/requests/create-system.request';
+
+export class UpdateSystemRequest extends PartialType(CreateSystemRequest) {}
